Updated Part B ready to submit

--- a/Basic QA system-Derek combination new whole thing.ipynb
+++ b/Basic QA system-Derek combination new whole thing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -116,26 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'answer_sentence'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-6fd3c0a06ecf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mvector_query\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvectorize_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvectorizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext_query\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mresult_similarity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult_index\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mclosest_document\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbours\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvector_query\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mresult_index\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquestions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"answer_sentence\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0mcorrect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'answer_sentence'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Lets make a list of the questions part A gets right\n",
-    "correct = []\n",
+    "# Output for part A\n",
+    "partAOutput = []\n",
     "for i in range (0, len(test)):\n",
     "    documents = testSents[i]\n",
     "    questions = test[i]\n",
@@ -148,19 +136,7 @@
     "        text_query = questions[j][\"question\"]\n",
     "        vector_query = vectorize_query(vectorizer, text_query)\n",
     "        result_similarity, result_index  = closest_document(neighbours, vector_query)\n",
-    "        if result_index == int(questions[j][\"answer_sentence\"]):\n",
-    "            correct.append((i,j,result_index))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "partACorrect = correct"
+    "        partAOutput.append((i,j,result_index))\n"
    ]
   },
   {
@@ -172,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -192,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -374,30 +350,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# For each question, evaluate if the answer is present as an entity\n",
+    "# Get the output for part B:\n",
+    "# In the form [(docID, questID, entities)]\n",
+    "partBOutput = []\n",
+    "for (docIndex, questionIndex, sentenceIndex) in partAOutput:\n",
+    "    stanfordTags = taggedTest[docIndex][sentenceIndex]\n",
+    "    newTags = refineWordTags(stanfordTags)\n",
+    "    question = test[docIndex][questionIndex][\"question\"]\n",
+    "    partBOutput.append((question, newTags))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Question: What year did the Crimean War begin?\n",
+      "\n",
+      "PossibleAnswers: \n",
+      "[(u'a', 'STOPWORD'), (u'forgotten theatre', u'O'), (u'of the', 'STOPWORD'), (u'Crimean War', 'OTHERCAP'), (u'.', 'PUNC')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example output:\n",
+    "print \"\\nQuestion: \" + partBOutput[0][0]\n",
+    "print \"\\nPossibleAnswers: \" \n",
+    "print partBOutput[0][1]\n",
     "\n",
-    "def evaluateNER():\n",
-    "    correct = []\n",
-    "    wrong = []\n",
-    "    for (doc, questID, sentID) in partACorrect:\n",
-    "        answer = dev[doc][questID][\"answer\"]\n",
-    "        possAnswers = refineWordTags(taggedDev[doc][sentID])        \n",
-    "        inThere = False\n",
-    "        for possAnswer in possAnswers:\n",
-    "            if possAnswer[0] == answer:\n",
-    "                inThere = True\n",
-    "                break\n",
-    "        if inThere:\n",
-    "            correct.append((doc,sentID,answer, possAnswers))\n",
-    "        else :\n",
-    "            wrong.append((doc,sentID, answer, possAnswers))\n",
-    "    return (correct, wrong)\n"
+    "#Okay so this one is wrong, but hey! "
    ]
   },
   {
@@ -781,9 +775,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -795,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
