Added dev checking

--- a/Basic QA system-Derek combination new whole thing.ipynb
+++ b/Basic QA system-Derek combination new whole thing.ipynb
@@ -116,27 +116,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Output for part A\n",
-    "partAOutput = []\n",
-    "for i in range (0, len(test)):\n",
-    "    documents = testSents[i]\n",
-    "    questions = test[i]\n",
+    "def generatePartAOutput(qs, sents):\n",
+    "    # Output for part A\n",
+    "    partAOutput = []\n",
+    "    for i in range (0, len(qs)):\n",
+    "        documents = sents[i]\n",
+    "        questions = qs[i]\n",
     "\n",
-    "    vector_documents, vectorizer = vectorize_documents(documents)\n",
-    "    analyze = vectorizer.build_analyzer()\n",
-    "    neighbours = process_neighbours(vector_documents)\n",
+    "        vector_documents, vectorizer = vectorize_documents(documents)\n",
+    "        analyze = vectorizer.build_analyzer()\n",
+    "        neighbours = process_neighbours(vector_documents)\n",
     "\n",
-    "    for j in range (0, len(questions)):\n",
-    "        text_query = questions[j][\"question\"]\n",
-    "        vector_query = vectorize_query(vectorizer, text_query)\n",
-    "        result_similarity, result_index  = closest_document(neighbours, vector_query)\n",
-    "        partAOutput.append((i,j,result_index))\n"
+    "        for j in range (0, len(questions)):\n",
+    "            text_query = questions[j][\"question\"]\n",
+    "            vector_query = vectorize_query(vectorizer, text_query)\n",
+    "            result_similarity, result_index  = closest_document(neighbours, vector_query)\n",
+    "            partAOutput.append((i,j,result_index))\n",
+    "    return partAOutput\n",
+    "\n",
+    "partADevAnswers = generatePartAOutput(dev, devSents)\n",
+    "partATestAnswers = generatePartAOutput(test, testSents)"
    ]
   },
   {
@@ -350,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -358,17 +363,126 @@
    "source": [
     "# Get the output for part B:\n",
     "# In the form [(docID, questID, entities)]\n",
-    "partBOutput = []\n",
-    "for (docIndex, questionIndex, sentenceIndex) in partAOutput:\n",
-    "    stanfordTags = taggedTest[docIndex][sentenceIndex]\n",
-    "    newTags = refineWordTags(stanfordTags)\n",
-    "    question = test[docIndex][questionIndex][\"question\"]\n",
-    "    partBOutput.append((question, newTags))"
+    "def generatePartBOutput(qs, partAOutput, taggedSents):   \n",
+    "    partBOutput = []\n",
+    "    for (docIndex, questionIndex, sentenceIndex) in partAOutput:\n",
+    "        stanfordTags = taggedSents[docIndex][sentenceIndex]\n",
+    "        newTags = refineWordTags(stanfordTags)\n",
+    "        question = qs[docIndex][questionIndex][\"question\"]\n",
+    "        partBOutput.append((docIndex, questionIndex, sentenceIndex, newTags))\n",
+    "    return partBOutput\n",
+    "\n",
+    "partBDevAnswers = generatePartBOutput(dev, partADevAnswers, taggedDev)\n",
+    "partBTestAnswers = generatePartBOutput(test, partATestAnswers, taggedTest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0,\n",
+       " 0,\n",
+       " 283,\n",
+       " [(u'a', 'STOPWORD'),\n",
+       "  (u'forgotten theatre', u'O'),\n",
+       "  (u'of the', 'STOPWORD'),\n",
+       "  (u'Crimean War', 'OTHERCAP'),\n",
+       "  (u'.', 'PUNC')])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "partBTestAnswers[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object has no attribute '__getitem__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-0ea22eec4681>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## Example output:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"\\nQuestion: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpartBTestAnswers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"\\nPossibleAnswers: \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mpartBTestAnswers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object has no attribute '__getitem__'"
+     ]
+    }
+   ],
+   "source": [
+    "## Example output:\n",
+    "print \"\\nDocIndex: \" + partBTestAnswers[0][0]\n",
+    "print \"\\nQuestionIndex: \" + partBTestAnswers[0][1]\n",
+    "print \n",
+    "\n",
+    "print \"\\nPossibleAnswers: \" \n",
+    "print partBTestAnswers[0][3]\n",
+    "\n",
+    "#Okay so this one is wrong, but hey! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quick evaluation of the first two parts on the dev set:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def evaluateNERonDev():\n",
+    "    correct = []\n",
+    "    wrong = []\n",
+    "    for (docIndex, questionIndex, sentenceIndex, newTags) in partBDevAnswers:\n",
+    "        answer = dev[docIndex][questionIndex][\"answer\"]\n",
+    "        possAnswers = newTags \n",
+    "        inThere = False\n",
+    "        for possAnswer in newTags:\n",
+    "            if possAnswer[0] == answer:\n",
+    "                inThere = True\n",
+    "                break\n",
+    "        if inThere:\n",
+    "            correct.append((docIndex, questionIndex, sentenceIndex, newTags))\n",
+    "        else :\n",
+    "            wrong.append((docIndex, questionIndex, sentenceIndex, newTags))\n",
+    "    return (correct, wrong)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -377,21 +491,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Question: What year did the Crimean War begin?\n",
-      "\n",
-      "PossibleAnswers: \n",
-      "[(u'a', 'STOPWORD'), (u'forgotten theatre', u'O'), (u'of the', 'STOPWORD'), (u'Crimean War', 'OTHERCAP'), (u'.', 'PUNC')]\n"
+      "2409\n",
+      "6054\n"
      ]
     }
    ],
    "source": [
-    "## Example output:\n",
-    "print \"\\nQuestion: \" + partBOutput[0][0]\n",
-    "print \"\\nPossibleAnswers: \" \n",
-    "print partBOutput[0][1]\n",
-    "\n",
-    "#Okay so this one is wrong, but hey! "
+    "(nerDevCorrect, nerDevWrong) = evaluateNERonDev()\n",
+    "print len(nerDevCorrect)\n",
+    "print len(nerDevWrong)"
    ]
   },
   {
