--- a/stripped.ipynb
+++ b/stripped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -16,9 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -417,18 +417,18 @@
     "        \n",
     "        if entity_tag == question_type:\n",
     "#             print \"MATCH\", answer[0], question_type, question\n",
-    "#             ranked_list[index].append(1)\n",
-    "            ranked_list[index][1] += 1\n",
+    "            ranked_list[index].append(2)\n",
+    "#             ranked_list[index][1] += 1\n",
     "        else:\n",
-    "#             ranked_list[index].append(-1)\n",
-    "            ranked_list[index][1] -= 1\n",
+    "            ranked_list[index].append(1)\n",
+    "#             ranked_list[index][1] -= 1\n",
     "            \n",
     "    return ranked_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -552,19 +552,43 @@
     "#                 print \"OPEN CLASS: \", open_class_locations                \n",
     "                scale = (len(answer_sent) - min_dist) * 1.0 / len(answer_sent)\n",
     "#                 print \"JOINT: \", min_dist_ind, scale\n",
-    "#                 avg_dict[index] += scale\n",
-    "                ranked_list[index][1] *= scale\n",
+    "                avg_dict[index] += scale\n",
+    "#                 ranked_list[index][1] *= scale\n",
     "    \n",
     "    \n",
-    "#     for key, value in avg_dict.iteritems():\n",
-    "#         ranked_list[key].append(value / len(question))\n",
+    "    for key, value in avg_dict.iteritems():\n",
+    "        ranked_list[key].append(value / len(question))\n",
     "\n",
     "    return ranked_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def reduce_rank(ranking_list):\n",
+    "    \n",
+    "    new_ranking = []\n",
+    "    \n",
+    "    for rank in ranking_list:\n",
+    "        \n",
+    "        new_rank = ( rank[1] + rank[2] )\n",
+    "        \n",
+    "        if len(rank) == 4:\n",
+    "             new_rank *= rank[3]\n",
+    "        \n",
+    "        new_ranking.append([rank[0], new_rank])\n",
+    "        \n",
+    "    return sorted(new_ranking, key=lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -588,8 +612,9 @@
     "        first_pass = first_filter2(question, possAnswers)\n",
     "        second_pass = second_filter2(question, first_pass)\n",
     "        third_pass = third_filter2(question, possAnswers, second_pass)\n",
+    "        fourth_pass = reduce_rank(third_pass)\n",
     "        \n",
-    "        pp.pprint(third_pass)\n",
+    "        pp.pprint(fourth_pass)\n",
     "        print\n",
     "    \n",
     "        if index > 1:\n",
@@ -598,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -608,17 +633,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   [(u'Leaves', 'OTHERCAP'), 0.8147762747138397],\n",
-      "    [(u'IR-filter', 'OTHERCAP'), 0.6493236212278877],\n",
-      "    [(u'IR-passing', 'OTHERCAP'), 0.1748178980228928],\n",
-      "    [(u'Wood', 'OTHERCAP'), 0.06555671175858481],\n",
-      "    [(u'IR-glowing', 'OTHERCAP'), 0.02497398543184183],\n",
-      "    [(u'IR', u'LOCATION'), 0.0]]\n",
+      "[   [(u'Leaves', 'OTHERCAP'), 1.3548387096774193],\n",
+      "    [(u'IR-filter', 'OTHERCAP'), 1.2096774193548385],\n",
+      "    [(u'IR', u'LOCATION'), 0.967741935483871],\n",
+      "    [(u'IR-passing', 'OTHERCAP'), 0.629032258064516],\n",
+      "    [(u'Wood', 'OTHERCAP'), 0.3870967741935484],\n",
+      "    [(u'IR-glowing', 'OTHERCAP'), 0.24193548387096775]]\n",
       "\n",
       "[[(u'The', 'OTHERCAP'), 0.0]]\n",
       "\n",
-      "[   [(u'William Herschel', u'PERSON'), 1.5555555555555556],\n",
-      "    [(u'19th', 'NUMBER'), 0.14814814814814814],\n",
+      "[   [(u'William Herschel', u'PERSON'), 2.888888888888889],\n",
+      "    [(u'19th', 'NUMBER'), 1.1666666666666665],\n",
       "    [(u'The', 'OTHERCAP'), 0.0]]\n",
       "\n"
      ]
@@ -630,7 +655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -653,11 +687,12 @@
     "        \n",
     "        first_pass = first_filter2(question, possAnswers)\n",
     "        second_pass = second_filter2(question, first_pass)\n",
-    "        third_pass = third_filter2(question, possAnswers, second_pass)        \n",
+    "        third_pass = third_filter2(question, possAnswers, second_pass)\n",
+    "        fourth_pass = reduce_rank(third_pass)\n",
     "                \n",
     "#         pp.pprint(third_pass)\n",
     "\n",
-    "        top_answer = third_pass.pop(0)\n",
+    "        top_answer = fourth_pass.pop(0)\n",
     "#         pp.pprint(top_answer)        \n",
     "        answerPredicited = top_answer[0][0]\n",
     "        \n",
@@ -675,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -684,9 +719,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number Correct : 1163\n",
-      "Number incorrect: 2245\n",
-      "Average correct : 0.341255868545\n"
+      "Number Correct : 1707\n",
+      "Number incorrect: 1701\n",
+      "Average correct : 0.50088028169\n"
      ]
     }
    ],
