--- a/stripped.ipynb
+++ b/stripped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -374,10 +374,9 @@
     "\n",
     "        raw_span = entity[0]\n",
     "        span_tag = entity[1]\n",
-    "        \n",
     "        set_span = set(pre_process(raw_span))\n",
     "        \n",
-    "        if span_tag != \"O\" and span_tag != \"STOPWORD\" and span_tag !=\"O\":\n",
+    "        if span_tag != \"O\" and span_tag != \"STOPWORD\" and span_tag !=\"PUNC\":\n",
     "            \n",
     "            if set_span.issubset(question):\n",
     "                \n",
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -434,18 +433,6 @@
    },
    "outputs": [],
    "source": [
-    "# import nltk\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "# Follow lemmatize function from guide notebook: WSTA_N1B_preprocessing.ipynb\n",
     "lemmatizer = nltk.stem.wordnet.WordNetLemmatizer()\n",
     "word_tokenizer = nltk.tokenize.WordPunctTokenizer() #word_tokenize #tokenize.regexp.WordPunctTokenizer()\n",
@@ -473,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -588,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -623,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -655,16 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -710,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
