--- a/Basic QA system - Final Workflow.ipynb
+++ b/Basic QA system - Final Workflow.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -396,12 +396,12 @@
     "    print process_type.capitalize() + \" Correct: \", len(correct)\n",
     "    print process_type.capitalize() + \" Wrong: \", len(wrong)\n",
     "    print process_type.capitalize() + \" Total: \", total\n",
-    "    print process_type.capitalize() + \" Average %: \", avg"
+    "    print process_type.capitalize() + \" Overall Average %: \", avg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -412,12 +412,13 @@
     "    process_part_a(name, data)\n",
     "    if stats:\n",
     "        process_generic(name, data, \"retrieval\", evaluate_retrieval)\n",
+    "        \n",
     "    print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +435,7 @@
       "Retrieval Correct:  156\n",
       "Retrieval Wrong:  248\n",
       "Retrieval Total:  404\n",
-      "Retrieval Average %:  0.386138613861\n",
+      "Retrieval Overall Average %:  0.386138613861\n",
       "\n"
      ]
     }
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -711,12 +712,19 @@
     "    process_part_b(name, data)\n",
     "    if stats:\n",
     "        process_generic(name, data, \"ner\", evaluate_ner)\n",
+    "        \n",
+    "        correct_ner = len(data[name][\"ner_correct\"])\n",
+    "        correct_ret = len(data[name][\"retrieval_correct\"])\n",
+    "        \n",
+    "        avg = correct_ner * 1.0 / correct_ret\n",
+    "        \n",
+    "        print \"ner\".capitalize() + \" Correct Average of Previous %: \", avg\n",
     "    print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -742,7 +750,8 @@
       "Ner Correct:  60\n",
       "Ner Wrong:  344\n",
       "Ner Total:  404\n",
-      "Ner Average %:  0.148514851485\n",
+      "Ner Overall Average %:  0.148514851485\n",
+      "Ner Correct Average of Previous %:  0.384615384615\n",
       "\n"
      ]
     }
@@ -1149,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -1160,12 +1169,21 @@
     "    process_part_c(name, data)\n",
     "    if stats:\n",
     "        process_generic(name, data, \"rank\", evaluate_rank)\n",
+    "        \n",
+    "        \n",
+    "        correct_rank = len(data[name][\"rank_correct\"])\n",
+    "        correct_ner = len(data[name][\"ner_correct\"])\n",
+    "        \n",
+    "        avg = correct_rank * 1.0 / correct_ner\n",
+    "        \n",
+    "        print \"rank\".capitalize() + \" Correct Average of Previous %: \", avg        \n",
+    "        \n",
     "    print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -1185,7 +1203,8 @@
       "Rank Correct:  25\n",
       "Rank Wrong:  379\n",
       "Rank Total:  404\n",
-      "Rank Average %:  0.0618811881188\n",
+      "Rank Overall Average %:  0.0618811881188\n",
+      "Rank Correct Average of Previous %:  0.416666666667\n",
       "\n"
      ]
     }
@@ -1245,9 +1264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1266,9 +1285,10 @@
     "            \n",
     "            predicted_answer = result_c[\"predicted_answer\"]\n",
     "            \n",
-    "            if predicted_answer not None:\n",
-    "                f_csv.writerows([{'id':index+1,'answer':.encode(\"utf-8\")}])\n",
-    "            else\n",
+    "            if predicted_answer is not None:\n",
+    "                f_csv.writerows([{'id':index+1,'answer':predicted_answer.encode(\"utf-8\")}])\n",
+    "            else:\n",
+    "                f_csv.writerows([{'id':index+1,'answer':\"NONE\"}])\n",
     "            \n",
     "#             if isinstance( answer_list[index]['answer'], int):\n",
     "                \n",
@@ -1282,36 +1302,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'encode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-50-109a09e51ef0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprocess_submit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"rapid\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDATA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-49-17faba80cb1a>\u001b[0m in \u001b[0;36mprocess_submit\u001b[1;34m(name, data)\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_c\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc_output_answer_set\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m             \u001b[0mf_csv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'answer'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mresult_c\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"predicted_answer\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"utf-8\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m#             if isinstance( answer_list[index]['answer'], int):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'encode'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "process_submit(\"rapid\", DATA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "process_submit(\"test\", DATA)"
+   ]
   },
   {
    "cell_type": "code",
