Tried some methods, fixed up logging.

--- a/Basic QA system - Final Workflow.ipynb
+++ b/Basic QA system - Final Workflow.ipynb
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 168,
    "metadata": {
     "collapsed": true
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 169,
    "metadata": {
     "collapsed": true
    },
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 172,
    "metadata": {
     "collapsed": true
    },
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 173,
    "metadata": {
     "collapsed": true
    },
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 174,
    "metadata": {
     "collapsed": true
    },
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 175,
    "metadata": {
     "collapsed": true
    },
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 176,
    "metadata": {
     "collapsed": true
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
@@ -1302,11 +1302,11 @@
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  25\n",
-      "Rank Wrong:  379\n",
+      "Rank Correct:  27\n",
+      "Rank Wrong:  377\n",
       "Rank Total:  404\n",
-      "Rank Overall Average %:  0.0618811881188\n",
-      "Rank Correct Average of Previous %:  0.416666666667\n",
+      "Rank Overall Average %:  0.0668316831683\n",
+      "Rank Correct Average of Previous %:  0.45\n",
       "\n"
      ]
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
@@ -1329,16 +1329,25 @@
       "Processing rank:  train\n",
       "\n",
       "Part C Output: \n",
-      "[   {   'predicted_answer': u'eight',\n",
+      "[   {   'candidates': [   (u'They', 'O'),\n",
+      "                          (u'had a', 'STOPWORD'),\n",
+      "                          (u'playing time', u'O'),\n",
+      "                          (u'of', 'STOPWORD'),\n",
+      "                          (u'eight', 'NUMBER'),\n",
+      "                          (u'minutes', 'POSTNUM'),\n",
+      "                          (u'.', 'PUNC')],\n",
+      "        'predicted_answer': u'eight',\n",
       "        'question_index': 0,\n",
+      "        'ranked_answers': [   [(u'eight', 'NUMBER'), 0.44999999999999996],\n",
+      "                              [(u'minutes', 'POSTNUM'), 0.30000000000000004]],\n",
       "        'sentence_index': 149,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  9588\n",
-      "Rank Wrong:  60571\n",
+      "Rank Correct:  9508\n",
+      "Rank Wrong:  60651\n",
       "Rank Total:  70159\n",
-      "Rank Overall Average %:  0.136661012842\n",
-      "Rank Correct Average of Previous %:  0.475477312175\n",
+      "Rank Overall Average %:  0.135520745735\n",
+      "Rank Correct Average of Previous %:  0.471510042152\n",
       "\n"
      ]
     }
@@ -1349,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -1361,16 +1370,30 @@
       "Processing rank:  dev\n",
       "\n",
       "Part C Output: \n",
-      "[   {   'predicted_answer': None,\n",
+      "[   {   'candidates': [   (u'Infrared', 'O'),\n",
+      "                          (u'is', 'STOPWORD'),\n",
+      "                          (u'used', u'O'),\n",
+      "                          (u'in', 'STOPWORD'),\n",
+      "                          (u'night vision equipment', u'O'),\n",
+      "                          (u'when there is', 'STOPWORD'),\n",
+      "                          (u'insufficient visible light', u'O'),\n",
+      "                          (u'to', 'STOPWORD'),\n",
+      "                          (u'see', u'O'),\n",
+      "                          (u'.', 'PUNC')],\n",
+      "        'predicted_answer': u'night vision equipment',\n",
       "        'question_index': 0,\n",
+      "        'ranked_answers': [   [   (u'night vision equipment', u'O'),\n",
+      "                                  0.26666666666666666],\n",
+      "                              [   (u'insufficient visible light', u'O'),\n",
+      "                                  0.19999999999999998]],\n",
       "        'sentence_index': 71,\n",
       "        'set_index': 0}]\n",
       "\n",
-      "Rank Correct:  1101\n",
-      "Rank Wrong:  7362\n",
+      "Rank Correct:  1094\n",
+      "Rank Wrong:  7369\n",
       "Rank Total:  8463\n",
-      "Rank Overall Average %:  0.130095710741\n",
-      "Rank Correct Average of Previous %:  0.44756097561\n",
+      "Rank Overall Average %:  0.129268580881\n",
+      "Rank Correct Average of Previous %:  0.444715447154\n",
       "\n"
      ]
     }
@@ -1381,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
@@ -1404,6 +1427,9 @@
     "        predicted_answer = result_wrong[\"predicted_answer\"]\n",
     "        \n",
     "        if question[\"answer_sentence\"] == result_wrong[\"sentence_index\"]:\n",
+    "            \n",
+    "            print \"=\" * 20\n",
+    "            print \"=\" * 20\n",
     "        \n",
     "            print \"Question: \"\n",
     "            print\n",
@@ -1434,21 +1460,23 @@
     "            print \"Correct Answer: (Part C)\"\n",
     "            print\n",
     "            pp.pprint(question[\"answer\"])            \n",
-    "\n",
     "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 181,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "====================\n",
+      "====================\n",
       "Question: \n",
       "\n",
       "u'What was the primary use of a phonographic disc record?'\n",
@@ -1491,14 +1519,17 @@
       "\n",
       "Ranked Answers: (Part C)\n",
       "\n",
-      "[   [(u'late', 'PRENUM'), 1.7934782608695652],\n",
-      "    [(u'late', 'PRENUM'), 1.7934782608695652],\n",
-      "    [(u'late', 'PRENUM'), 1.7934782608695652],\n",
-      "    [(u'20th', 'NUMBER'), 1.6956521739130435],\n",
-      "    [(u'century', 'POSTNUM'), 1.6630434782608696],\n",
-      "    [(u'1880s', 'NUMBER'), 1.0434782608695652],\n",
-      "    [(u'1920s\\u2013by', 'NUMBER'), 0.9456521739130433],\n",
-      "    [(u'1920s', 'NUMBER'), 0.75]]\n",
+      "[   [(u'late', 'PRENUM'), 3],\n",
+      "    [(u'20th', 'NUMBER'), 3],\n",
+      "    [(u'century', 'POSTNUM'), 3],\n",
+      "    [(u'late', 'PRENUM'), 3],\n",
+      "    [(u'1880s', 'NUMBER'), 3],\n",
+      "    [(u'1920s\\u2013by', 'NUMBER'), 3],\n",
+      "    [(u'late', 'PRENUM'), 3],\n",
+      "    [(u'1920s', 'NUMBER'), 3],\n",
+      "    [(u'The phonograph disc record', 'O'), 2],\n",
+      "    [(u'primary medium used', u'O'), 2],\n",
+      "    [(u'phonograph cylinder record\\u2013with', u'O'), 2]]\n",
       "\n",
       "Predicted Answer: (Part C)\n",
       "\n",
